tests/paczka2/big_fuzzy/57524766.err
Error in line 7: joN A999 33,8
Error in line 9: nT5iBQjmu A599 23,1
Error in line 10: joN A962 58,9
Error in line 17: joN A999 90,8
Error in line 18: joN A962 50,9
Error in line 32: joN A999 63,7
Error in line 27: 0p1 A999 64,5
Error in line 36: joN A962 28,7
Error in line 41: nT5iBQjmu S216 38,7
Error in line 45: nT5iBQjmu A962 65,9
Error in line 54: MridVhDMSDk A599 4,7
Error in line 37: 0p1 S216 44,8
Error in line 58: MridVhDMSDk A599 42,5
Error in line 72: MridVhDMSDk S216 18,1
Error in line 75: A999 S21| 10,0
Error in line 73: A999 A999 36,9
Error in line 74: MridVhDMSDk S21 9,7
Error in line 85: A999 A962 92,2
Error in line 91: MdA7 A599 17,4
Error in line 99: 0p1 A999 40,2
Error in line 112: 0p1 A999 84,6
Error in line 104: A999 A999 0,1
Error in line 115: 0p1 A599 88,2
Error in line 140: joN S2k6 64,8
Error in line 141: Ba3LxTfe9W A962 84,12
Error in line 138: joN A962 21,8
Error in line 135: MdA7 A962 30,4
Error in line 150: 0p1 A599 26,2
Error in line 143: joN S216 322,1
Error in line 156: joN A599 90,2
Error in line 172: joN A962 88,2
Error in line 180: Ba3LxTfe9W A962 46,5
Error in line 176: joN A999 95,4
Error in line 190: joN A999 17,0
Error in line 191: joN A599 21,9
Error in line 195: 0p1 A962 88,6
Error in line 192: A999 A962 37,1
Error in line 183: nT5iBQjmu A999 0,1
Error in line 199: A999 A999 35,3
Error in line 209: MridVhDMSDk A999 70,01
Error in line 217: nT5iBQjmu A962 50,4
Error in line 226: MridVhDMSDk A999 176,0
Error in line 222: Ba3LxTfe9W A599 7,7
Error in line 203: 0p1 S216 35,0
Error in line 228: joN S216 49,1
